Add originalUser and authenticatedUser as selectors available for resource group selection